--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -9,7 +9,6 @@
 # GPL3-License.txt file that was distributed with this source code.
 #
 AND=Enth\u00E4lt
-AuswaehlenAusVorhandenenProzessen=Ausw\u00E4hlen aus vorhandenen Vorg\u00E4ngen
 authorities=Berechtigungen
 authority=Berechtigung
 authorityAdd=Add authority
@@ -19,15 +18,9 @@ authoritiesClient=Mandantberechtigungen
 authoritiesGlobal=Globale Berechtigungen
 Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Bandweise Endkontrolle und Freigabe aller Metadaten)
 Bestandsaufnahme\ der\ gedruckten\ Version=Bestandsaufnahme der gedruckten Version
-createMapping=ElasticSearch Mapping erzeugen
-CreateNewspaperProcessesTask=Anlegen von Zeitungsvorg\u00E4ngen
-CreateNewspaperProcessesTask.MetadataNotAllowedException=Der Vorgang {0} kann nicht angelegt werden, da einem Strukturyp ein Metadatum nicht zugewiesen werden kann
-counting=Z\u00E4hlung
 dashboard=Dashboard
 DMSExportByThread=Der Vorgang wird vom Taskmanager ins DMS exportiert\:
 DMSExportThreadCreated=Der DMS-Export f\u00FCr den Vorgang wurde im Taskmanager vorbereitet\:
-DocketInUse=Der Laufzettel ist noch mit Prozessen verkn\u00FCpft und kann nicht gel\u00F6scht werden.
-DocketNotFound=Die angegebene Datei konnte nicht gefunden werden.
 EmptyTask=Beispiel f\u00FCr eine lang laufende Aufgabe
 ExportNewspaperBatchTask=Zeitungsgesamtausgabe ins DMS exportieren
 ExportSerialBatchTask=Fortlaufendes Sammelwerk ins DMS exportieren
@@ -40,28 +33,8 @@ Import\ /\ Lieferung\ der\ russischen\ Metadaten=Import / Lieferung der russisch
 Import\ der\ Zentralblatt-Metadaten=Import der Zentralblatt-Metadaten
 InvalidIdentifierCharacter=Der Wert des Identifiers {0} im Strukturelement {1} enth\u00E4lt ung\u00FCltige Zeichen.
 InvalidIdentifierSame=Der Wert des Identifiers {0} enth\u00E4lt die gleichen Werte in {1} und {2}.
-Language=Sprache
 mapping=ElasticSearch Mapping
 MassDownloadProjectCreationError=Der Projektordner {0} kann nicht erstellt werden.
-massImport=Massenimport
-MetadataDigitalDocumentError=DigitalDocument Fehler bei\: {0}
-MetadataDoesNotEndWith=endet nicht mit dem Wert
-MetadataDoesNotStartWith=startet nicht mit dem Wert
-MetadataInvalidData=Ung\u00FCltige Eingaben\:
-MetadataIsEmpty=enth\u00E4lt keine Daten
-MetadataMandatoryElement=fehlende Eingabe\:
-MetadataMissingIdentifier=fehlender Wert f\u00FCr Identifier
-MetadataNotEnoughElements=muss mindestens einmal existieren
-MetadataNotOneElement=muss genau einmal existieren, existiert jedoch
-MetadataPaginationError=Verifizierung nicht erfolgreich, keine Seiten zugewiesen
-MetadataPaginationPages=Seite ohne Strukturelemente\:
-MetadataPaginationStructure=Strukturelement ohne Seiten\:
-MetadataPersonWithoutRole=Person ohne Rolle
-MetadataReadError=XML Lesefehler bei\: {0}
-MetadataTimeout=Die Metadaten wurden von Ihnen 30 min nicht bearbeitet und wurden daher wieder f\u00FCr andere Benutzer freigegeben. Sie befinden sich gerade in Arbeit.
-MetadataTimes=mal
-MetadataToManyElements=darf nur einmal vorhanden sein, existiert aber
-MetadataWithValue=mit dem Wert
 MetsEditorMissingFile=Die Datei {0} kann im Ordner {1} nicht gefunden werden.
 NOT=Enth\u00E4lt nicht
 NoCataloguePluginForCatalogue=Keines der verf\u00fcgbaren OPAC-Plugins unterst\u00fctzt diesen Katalog.
@@ -74,11 +47,12 @@ RulesetInUse=Regelsatz ist noch mit Vorg\u00E4ngen verkn\u00FCpft und kann nicht
 RulesetNotFound=Die angegebene Regelsatzdatei konnte nicht gefunden werden.
 UngueltigerTitelFuerVorgang=Ung\u00FCltiger Titel f\u00FCr einen Vorgang.
 UnvollstaendigeDaten=Unvollst\u00E4ndige Daten\:
-URI_malformed=Der URI hat ein falsches Format.
 _(number)=(Anzahl)
 aLazyInitializationErrorOcurred=Ein Fehler mit der Datenbankverbindung trat auf. Eventuell wurde dieser Fehler durch Verwenden des Zur\u00FCck Buttons verursacht. Sie m\u00FCssen Kitodo vermutlich neu \u00FCber den Link/URL starten
 abDerErstenMarkiertenSeite=Ab der ersten markierten Seite
 abgeschlosseneTasksAusListeEntfernen=Abgeschlossene Aufgaben l\u00F6schen
+active=Aktiv
+activeUsers=Aktive Benutzer
 addDemoTask=Beispielaufgabe hinzuf\u00FCgen
 addFilter=Filter hinzuf\u00FCgen
 addNewMetadataGroup=Neue Metadatengruppe hinzuf\u00FCgen
@@ -88,12 +62,11 @@ addWorkpieceProperty=Werkst\u00FCckeigenschaft hinzuf\u00FCgen
 addToBatch=Vorgang wurde zur Gruppe {0} hinzugef\u00FCgt.
 addToProcessLog=Zu Vorgangslog hinzuf\u00FCgen
 addToSelectedBatch=Selektierte Vorg\u00E4nge zu ausgew\u00E4hltem Batch hinzuf\u00FCgen
+additionalDetails=Zus\u00E4tzliche Details
 administration=Administration
 # administrativ is supposedly use for translation of TaskEditType
 administrativ=administrativ
-active=Aktiv
-aktiveBenutzer=Aktive Benutzer
-aktualisierungstyp=Art der Aktualisierung
+editType=Art der Aktualisierung
 aktuelleProzesse=Vorg\u00E4nge
 aktuelleSchritte=Meine Aufgaben
 allActiveUsers=alle aktiven Nutzer
@@ -107,15 +80,13 @@ allgemeinesTextDemo=Hier k\u00F6nnte ein allgemeiner Informationstext stehen.<br
 allMyTasks=alle meine Aufgaben
 alsErstesKindDesAktuellenElements=Als erstes Subelement des aktuellen Elementes
 alsLetztesKindDesAktuellenElements=Als letztes Subelement des aktuellen Elementes
-alteSessionsAufraeumen=Alte Sessions aufr\u00E4umen
 anzahlDerArtikelUndImages=Anzahl der Artikel und Images
 anzahlDerImagesAllerTreffer=Anzahl der Images aller Treffer
 anzahlMetadatenUndImagesErmitteln=Anzahl der Metadaten und Images ermitteln
+apply=\u00DCbernehmen
 applyToAllProcesses=\u00DCbernehmen f\u00FCr alle Vorg\u00E4nge dieses Batches
 applyToThisProcess=\u00DCbernehmen f\u00FCr diesen Vorgang
 arabic=arabisch
-arbeitsschritt=Aufgabe
-arbeitsschritte=Abfolge der Aufgaben
 assigned=Zugewiesen
 ats=ATS
 ausGruppeLoeschen=Benutzer aus der Benutzergruppe l\u00F6schen
@@ -125,7 +96,7 @@ ausgelagerung=Auslagerung
 ausgewaehltesStrukturelement=Ausgew\u00E4hltes Strukturelement
 actions=Aktionen
 automatic=automatisch
-automatischerDmsImport=Automatischer DMS-Export
+automaticDmsImport=Automatischer DMS-Export
 automaticTask=Automatische Aufgabe
 author=Autor
 available=Verf\u00fcgbar
@@ -138,13 +109,13 @@ batch_type_serial=Fortlaufendes Sammelwerk
 batchProperties=Batch Eigenschaften
 batchStep=Batch Schritt
 batches=Batches
-bearbeiten=Bearbeiten
+edit=Bearbeiten
 bearbeitungDiesesSchrittesAbgeben=Die Bearbeitung dieser Aufgabe wieder abgeben
 # bearbeitungDiesesSchrittesWirklichAbgeben is used in onclick of xxx_box_Action.xhtml
 bearbeitungDiesesSchrittesWirklichAbgeben=M\u00F6chten Sie die Bearbeitung dieser Aufgabe wirklich abgeben und den Schritt wieder auf "offen" setzen?
 bearbeitungDiesesSchrittsUebernehmen=Die Bearbeitung dieser Aufgabe \u00FCbernehmen
-bearbeitungsbeginn=Bearbeitungsbeginn
-bearbeitungsende=Bearbeitungsende
+processingBegin=Bearbeitungsbeginn
+processingsEnd=Bearbeitungsende
 bearbeitungsstatusHochsetzen=Bearbeitungsstatus hochsetzen
 bearbeitungsstatusRuntersetzen=Bearbeitungsstatus runtersetzen
 bedienungshinweise=Bedienungshinweise
@@ -152,7 +123,7 @@ bedienungshinweiseText=Lorem deutsch ipsum dolor sit amet, consectetur adipisici
 beimAbschliessenVerifizieren=Beim Abschlie\u00DFen verifizieren
 bemerkung=Bemerkung
 bildVerlinken=Bild verlinken
-bitteAuswaehlen=Bitte ausw\u00E4hlen
+selectPlease=Bitte ausw\u00E4hlen
 blattzaehlung=Blattz\u00E4hlung
 blattzaehlungrectoverso=Blattz\u00E4hlung recto-verso
 blocked=Die Bearbeitung dieser Metadaten ist momentan gesperrt, da gerade ein anderer Benutzer daran arbeitet\:
@@ -254,7 +225,11 @@ correctionSolutionFor=Korrekturl\u00F6sung f\u00FCr Schritt
 correctionSolveProblem=Korrekturl\u00F6sung konnte nicht an folgende Aufgabe gemeldet werden!
 couldNotCreateImageFolder=Das Verzeichnis f\u00FCr die Images konnte nicht angelegt werden
 count=Anzahl
+counting=Z\u00E4hlung
 createExcel=Exceldatei erzeugen
+createMapping=ElasticSearch Mapping erzeugen
+createNewspaperProcessesTask=Anlegen von Zeitungsvorg\u00E4ngen
+createNewspaperProcessesTask.MetadataNotAllowedException=Der Vorgang {0} kann nicht angelegt werden, da einem Strukturyp ein Metadatum nicht zugewiesen werden kann
 createNewBatchFromSelectedProcesses=Neuen Batch aus den gew\u00E4hlten Vorg\u00E4ngen erzeugen
 createNewDocket=Neuen Laufzettel anlegen
 createNewProcessFromTemplate=Einen neuen Vorgang auf Basis der Produktionsvorlage anlegen
@@ -293,7 +268,9 @@ dmsImportImagesPfad=DMS-Export-Images-Ordner
 dmsImportPfadXmlDatei=DMS-Export-Ordner f\u00FCr XML-Datei
 dmsImportSuccessPfad=DMS-Export-Success-Ordner
 docket=Laufzettel
+docketInUse=Der Laufzettel ist noch mit Prozessen verkn\u00FCpft und kann nicht gel\u00F6scht werden.
 docketMissing=Die Konfigurationsdatei zur Laufzettelgenerierung existiert nicht
+docketNotFound=Die angegebene Datei konnte nicht gefunden werden.
 dockets=Laufzettel
 # docketSaving is used in docketEdit.xhtml - line 45
 docketSaving=Laufzettel wird gespeichert...
@@ -461,13 +438,14 @@ insertIntoPagination=In Paginierungssequenz einf\u00FCgen
 internesSpeicherformat=Internes Speicherformat
 isInUse=befindet sich in Bearbeitung durch
 isActive=Benutzerkonto aktiv
-keinProjektAngegeben=Kein Projekt angegeben
-keinTitelAngegeben=Kein Titel angeben
-keineLdapgruppeAngegeben=Keine LDAPgruppe angegeben
-langLaufendeAufgaben=Lang laufende Aufgaben
 languageUserInterface=Sprache f\u00FCr Nutzeroberfl\u00E4che
-lastPage=Als letzte Seite einf\u00FCgen
-laufzettelDrucken=Laufzettel drucken
+lastAccess=Letzter Zugriff
+lastActionBefore=Letzte Aktion vor\:
+lastEdited=Letzte Aktualisierung
+lastPage=Letzte Seite
+lastPageAdd=Als letzte Seite einf\u00FCgen
+lastUpdatedBy=Letzte Aktualisierung durch
+docketPrint=Laufzettel drucken
 ldapKonfigurationSchreiben=LDAP-Konfiguration schreiben
 ldapWritten=LDAP Konfiguration erfolgreich geschrieben f\u00FCr\:
 # ldapgroupSaving is used in ldapgroupEdit.xhtml - line 39
@@ -477,17 +455,13 @@ ldapGroupEdit=LDAP-Gruppe bearbeiten
 ldapGroupView=LDAP-Gruppe anzeigen
 ldapGroups=LDAP-Gruppen
 ldaplogin=LDAP login
-lebenszeichen=Letzte Aktion vor\:
-letzteAktualisierungDurch=Letzte Aktualisierung durch
-letzteSeite=Letzte Seite
-letzterZugriff=Letzter Zugriff
 loadAllProcesses=Alle Vorg\u00E4nge laden
 loadAssociatedBatchOfProcess=Die enthaltenden Batches der gew\u00E4hlten Vorg\u00E4nge ausw\u00E4hlen
 loadProcessesOfBatch=Vorg\u00E4nge des/der ausgew\u00E4hlten Batches laden
 locked=Gesperrt
 location=Standort
 login=Login
-loginBereitsVergeben=Login ist bereits vergeben
+loginInUse=Login ist bereits vergeben
 loginNotValid=Login enth\u00E4lt ung\u00FCltige Zeichen
 logout=Logout
 manifestationType=Typ
@@ -496,6 +470,7 @@ manuellMultiWorkflow=manuell, Massenverarbeitung
 # manuellSingleWorkflow is used in TaskEditType enum
 manuellSingleWorkflow=manuell, regul\u00E4rer Worklflow
 massendownload=Massendownload
+massImport=Massenimport
 masterpieceProperties=Werkst\u00FCckeigenschaft
 meineAufgabenMsg=W\u00E4hlen Sie eine der unten gelisteten Aufgaben zur Bearbeitung aus.
 meldungUeberProblemloesungAnNachchfolgendeStationSenden=Meldung \u00FCber Probleml\u00F6sung an nachfolgende Station senden
@@ -508,6 +483,24 @@ metaDataError=Es gab einen schwerwiegenden Fehler in der Metadaten-Datei. M\u00F
 metadata=Metadaten
 metadataCorrupt=Die Metadatendatei ist fehlerhaft, bitte informieren Sie ihren Administrator.
 metadataFileNotFound=Metadaten-Datei existiert nicht\:
+metadataDigitalDocumentError=DigitalDocument Fehler bei\: {0}
+metadataDoesNotEndWith=endet nicht mit dem Wert
+metadataDoesNotStartWith=startet nicht mit dem Wert
+metadataInvalidData=Ung\u00FCltige Eingaben\:
+metadataIsEmpty=enth\u00E4lt keine Daten
+metadataMandatoryElement=fehlende Eingabe\:
+metadataMissingIdentifier=fehlender Wert f\u00FCr Identifier
+metadataNotEnoughElements=muss mindestens einmal existieren
+metadataNotOneElement=muss genau einmal existieren, existiert jedoch
+metadataPaginationError=Verifizierung nicht erfolgreich, keine Seiten zugewiesen
+metadataPaginationPages=Seite ohne Strukturelemente\:
+metadataPaginationStructure=Strukturelement ohne Seiten\:
+metadataPersonWithoutRole=Person ohne Rolle
+metadataReadError=XML Lesefehler bei\: {0}
+metadataTimeout=Die Metadaten wurden von Ihnen 30 min nicht bearbeitet und wurden daher wieder f\u00FCr andere Benutzer freigegeben. Sie befinden sich gerade in Arbeit.
+metadataTimes=mal
+metadataToManyElements=darf nur einmal vorhanden sein, existiert aber
+metadataWithValue=mit dem Wert
 metadataGroups=Metadatengruppen
 metadataNotAllowed={0} {1} sind im neuen Element {2} nicht zulässig.
 metadatenBearbeiten=Metadaten bearbeiten
@@ -540,7 +533,7 @@ missingData=Unvollst\u00E4ndige Daten
 missingPlugin=Bitte w\u00E4hlen Sie ein Plugin aus.
 modeler=BPMN Modeler
 modules=Module
-moeglicheAktionen=M\u00F6gliche Aktionen
+possibleActions=M\u00F6gliche Aktionen
 month=Monat
 months=Monate
 multiTiffDownloaden=Multipage-Tiff downloaden
@@ -557,8 +550,7 @@ neuePersonHinzufuegen=Neue Person hinzuf\u00FCgen
 neuenRegelsatzAnlegen=Neuen Regelsatz anlegen
 neuenVorgangAnlegen=Neuen Vorgang anlegen
 neuesMetadatumAnlegen=Neue Metadaten anlegen
-neuesPasswort=Neues Passwort
-neuesPasswortFestlegen=Neues Passwort festlegen
+newPassword=Neues Passwort
 neuesProjektAnlegen=Neues Projekt anlegen
 neuesStrukturelement=Neues Strukturelement
 new=Startbereit
@@ -583,7 +575,6 @@ newLdapGroup=Neue LDAP-Gruppe
 no=Nein
 noBatchSelected=Es ist kein Batch ausgew\u00E4hlt.
 noFileSelected=Keine Datei ausgew\u00E4hlt.
-noLoggedUser=Es ist kein Benutzer angemeldet.
 noProcessSelected=Es wurde kein Vorgang ausgew\u00E4hlt.
 noStepsInWorkflow=Im Workflow wurden keine Aufgaben definiert.
 noUserInStep=Der Aufgabe {0} wurden keine Nutzer zugeordnet.
@@ -691,14 +682,10 @@ role=Rolle
 # rulesetSaving is used in rulesetEdit.xhtml - line 39
 rulesetSaving=Regelsatz wird gespeichert...
 saveConfiguration=Konfigurationsdatei speichern
-schrittBeimAnnehmenAbschliessen=Aufgabe beim Annehmen abschlie\u00DFen
-schrittDetails=Aufgabendetails
-schrittHinzufuegen=Aufgabe hinzuf\u00FCgen
-schritte=Aufgaben
 script=Skript
-scriptAusfuehren=Skript ausf\u00FChren
-scriptname=Skriptname
-scriptpath=Skriptpfad
+scriptExecute=Skript ausf\u00FChren
+scriptName=Skriptname
+scriptPath=Skriptpfad
 scriptTask=Skript-Schritt
 searchingOpac=Durchsuche OPAC...
 searchOPAC=OPAC durchsuchen
@@ -711,6 +698,7 @@ seitenzaehlungrectoverso=Seitenz\u00E4hlung recto-verso
 seitenzuordnung=Seitenzuordnung
 selectAll=Alle ausw\u00E4hlen
 selectFilter=Vordefinierter Filter
+selectFromExistingProcesses=Ausw\u00E4hlen aus vorhandenen Vorg\u00E4ngen
 selectPlugin=Bitte w\u00E4hlen Sie ein Plugin aus.
 serversideDownload=Serverseitiges importieren
 serversideUpload=Serverseitiges exportieren
@@ -739,7 +727,6 @@ startPage=Startseite
 status=Status
 statusAbgeschlossen=Abgeschlossen
 statusForUsers=Zust\u00E4ndigkeit der Benutzergruppen
-statusGesperrt=Gesperrt
 statusHoeherSetzen=Bearbeitungsstatus h\u00F6her setzen
 statusInBearbeitung=In Bearbeitung
 statusOffen=Offen
@@ -758,11 +745,16 @@ strukturelementVerschiebenErlaeuterung=W\u00E4hlen Sie nun die Stelle aus, an di
 suffix=Suffix
 table=Tabelle
 tableSize=Tabellengr\u00F6\u00DFe
-tasklist=Aufgabenliste
+task=Aufgabe
+taskAdd=Aufgabe hinzuf\u00FCgen
+taskCloseByAccept=Aufgabe beim Annehmen abschlie\u00DFen
+taskDetails=Aufgabendetails
+taskList=Aufgabenliste
 taskManagerIsRunning=Aufgaben nicht automatisch starten
 taskManagerIsStopped=Aufgaben automatisch starten
-taskmanager=Taskmanager
+taskManager=Taskmanager
 taskSaving=Aufgabe wird gespeichert...
+tasks=Aufgaben
 technischeDaten=Technische Daten
 technischerHintergrund=Technischer Hintergrund
 # technischerHintergrundTextDemo is used in kitodo_config.properties
@@ -771,19 +763,18 @@ templateDetails=Vorlagendetails
 templateProperty=Vorlageneigenschaft
 templateProperties=Vorlageneigenschaften
 templateTitle=Vorlagentitel
-tifheaderdocumentname=Tif-Header Documentname
-tifheaderimagedescription=Tif-Header Image-Beschreibung
+tifHeaderDocumentName=Tif-Header Documentname
+tifHeaderImageDescription=Tif-Header Image-Beschreibung
 timeZone.+01\:00=MEZ
 timeZone.+02\:00=MESZ
 timeout=Zeit\u00FCberschreitung
 timeoutForSession=Zeit\u00FCberschreitung der Session (in Minuten)
 timeoutWarningDMS=W\u00E4hrend des Exports m\u00FCssen viele Daten in das Pr\u00E4sentationssystem kopiert werden. Es kann daher zu Zeit\u00FCberschreitungen kommen. Dies bedeutet aber nicht, dass ein Fehler aufgetreten ist. Zur Erfolgspr\u00FCfung sollten Sie immer das Pr\u00E4sentationssystem nutzen.
-titel=Titel
-title=Vorgangstitel
+title=Titel
 titleEmpty=Vorgangstitel ist nicht ausgef\u00FCllt.
 to=bis
 tooManyBatchesSelected=Es sind mehrere Batches ausgew\u00E4hlt. W\u00E4hlen Sie genau einen Batch aus, um diese Funktion zu nutzen.
-treffer=Treffer
+hits=Treffer
 trefferDieserSeite=Treffer dieser Seite
 tsl=TSL
 typ=Typ
@@ -791,7 +782,6 @@ typeSet=Typ setzen\:
 typeSetLogistic=Logistik
 typeSetNewspaper=Zeitung
 typeSetSerial=fortlaufendes Sammelwerk
-uebernehmen=\u00DCbernehmen
 unableToDuplicateProject=Fehler: Projekt konnte nicht dupliziert werden!
 unableToRegisterObject=Objekt konnte nicht registriert werden
 unableToRetrieveTask=Aufgabe konnte nicht geladen werden!
@@ -807,6 +797,7 @@ upload=Images hochladen
 uploadFailed=Das Hochladen ist fehlgeschlagen.
 uploadFile=Datei hochladen
 uploadImport=Dateiupload-Import
+uriMalformed=Der URI hat ein falsches Format.
 useForPreviewImage=Nur ausgew\u00E4hltes Vorschaubild verlinken
 user=Benutzer
 users=Benutzer
@@ -833,7 +824,7 @@ userNotFound=Benutzer kann nicht ermittelt werden
 # userSaving is used in userEdit.xhtml - line 39
 userSaving=Benutzer wird gespeichert...
 validatingData=Daten werden validiert...
-validieren=Validieren
+validate=Validieren
 value=Wert
 verlinkungDesBildesMitStrukturelement=Verlinkung des Bildes mit dem gew\u00E4hlten Strukturelement
 verschiebenAbbrechen=Verschieben abbrechen
@@ -842,14 +833,13 @@ verzeichnisFertigHochladen=Verzeichnis "fertig" aus dem Homeverzeichnis hochlade
 volume=Band
 von=von
 vorDasAktuelleElement=Vor dem aktuellen Element
-vorgaben=Vorgaben
+defaults=Vorgaben
 vorgangsdatum=Vorgangsdatum
 vorlage=Physische Vorlage
 vorlagen=Physische Vorlagen
-vorname=Vorname
+firstName=Vorname
 week=Woche
 weeks=Wochen
-weiter=Weiter
 weiterZuArbeitsschritt=Senden an Arbeitsschritt
 werkstuecke=Werkst\u00FCcke
 wholeIndex=Gesamter Index
@@ -866,8 +856,5 @@ yes=Ja
 # youWillBeRedirected is used many times
 youWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 zeitschrift=Zeitschrift
-zugehoerigeSeiten=Zugeh\u00F6rige Seiten
-zuletztBearbeitet=Letzte Aktualisierung
-zurueck=Zur\u00FCck
+relatedPages=Zugeh\u00F6rige Seiten
 zurueckZuArbeitsschritt=Zur\u00FCck zu Aufgabe
-zusaetzlicheDetails=Zus\u00E4tzliche Details
