Add 'delete' action to process list

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -181,6 +181,8 @@ configurationChanged=Einstellungen ge\u00E4ndert
 configurationFile=Konfigurationsdatei
 configurationOPAC=OPAC Konfiguration
 configurationSaving=Konfiguration wird gespeichert...
+confirmDelete=L\u00F6schen best\u00E4tigen
+confirmDeleteProcess=Vorgang l\u00F6schen?
 confirmNewPassword=Neues Passwort best\u00E4tigen
 copy=Kopie
 correction=Korrektur
