--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -180,6 +180,8 @@ configurationChanged=Configuration changed
 configurationFile=Configuration file
 configurationOPAC=OPAC configuration
 configurationSaving=Saving configuration...
+confirmDelete=Confirm delete
+confirmDeleteProcess=Delete process?
 confirmNewPassword=Confirm new password
 copy=copy
 correction=Correction
