Update login mask

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -437,6 +437,7 @@ locked=Gesperrt
 location=Standort
 login=Login
 loginInUse=Login ist bereits vergeben
+loginNoteText=Kitodo.Production ist das Workflowmanagementmodul der Kitodo-Suite. Es unterst\u00FCtzt den Digitalisierungsprozess von verschiedenen Materialarten wie z.B. Drucken, Periodika, Handschriften, Noten und Musikalien, Einblattmedien und Dokumentennachl\u00E4ssen.
 loginNotValid=Login enth\u00E4lt ung\u00FCltige Zeichen
 logout=Logout
 manifestationType=Typ
@@ -589,6 +590,7 @@ person=Person
 personen=Personen
 personendatenKopieren=Personendaten kopieren
 personendatenLoeschen=Personendaten l\u00F6schen
+pleaseSignIn=Bitte melden Sie sich an
 plugins=Plugins
 position=Position
 ppn=PPN
@@ -692,6 +694,7 @@ showAutomaticTasks=Automatische Aufgaben anzeigen
 showClosedProcesses=Abgeschlossene Vorg\u00E4nge zeigen
 showDataForProcess=Zeige Daten des Vorgangs
 sieSindBereitsEingeloggt=Sie sind bereits eingeloggt. Wie m\u00F6chten Sie vorgehen?
+signIn=Anmelden
 # sollDerContentWirklichGeloeschtWerden is used in onclick
 sollDerContentWirklichGeloeschtWerden=Soll der Inhalt wirklich gel\u00F6scht werden?
 sollDieserEintragWirklichGeloeschtWerden=Soll dieser Eintrag wirklich gel\u00F6scht werden?
@@ -775,6 +778,7 @@ uploadImport=Dateiupload-Import
 uriMalformed=Der URI hat ein falsches Format.
 useForPreviewImage=Nur ausgew\u00E4hltes Vorschaubild verlinken
 user=Benutzer
+username=Benutzername
 users=Benutzer
 userEdit=Benutzer bearbeiten
 userAdd=Benutzer hinzuf\u00FCgen
