--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -435,6 +435,7 @@ locked=Locked
 location=Location
 login=Login
 loginInUse=Login already in use
+loginNoteText=Kitodo.Production is the workflow management module in the Kitodo suite. It supports the process of digitising a range of material types, such as books, periodicals, manuscripts, printed music, single-sheet media, and document collections.
 loginNotValid=Login uses not valid characters
 logout=Log out
 manifestationType=type
@@ -588,6 +589,7 @@ personBearbeiten=Edit person
 personen=Persons
 personendatenKopieren=Copy person data
 personendatenLoeschen=Delete person data
+pleaseSignIn=Sign in
 plugins=Plugins
 position=Position
 ppn=PPN
@@ -690,6 +692,7 @@ showAutomaticTasks=show automatic tasks
 showClosedProcesses=Show closed processes
 showDataForProcess=show process data
 sieSindBereitsEingeloggt=You are already logged in. How do you want to proceed?
+signIn=Sign in
 # sollDerContentWirklichGeloeschtWerden is used in onclick
 sollDerContentWirklichGeloeschtWerden=Do you really want to delete the content?
 sollDieserEintragWirklichGeloeschtWerden=Do you really want to delete this item?
@@ -773,6 +776,7 @@ uploadImport=file upload import
 uriMalformed=The URI is malformed.
 useForPreviewImage=Link selected preview image only
 user=User
+username=Username
 users=Users
 userEdit=Edit user
 userAdd=Add user
