add correction messages and comments

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -207,6 +207,7 @@ copyTemplates=Projekt inkl. Templates kopieren
 correction=Korrektur
 correctionFor=Korrektur f\u00FCr Schritt
 correctionK=K
+correctionMessage=Korrekturmeldung
 correctionMessageSend=Korrekturmeldung senden
 correctionMessageSendAllTasks=Korrekturmeldung f\u00FCr alle Schritte senden
 correctionMessageSendCurrentTask=Korrekturmeldung f\u00FCr aktuellen Schritt senden
