--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -206,6 +206,7 @@ copyTemplates=Copy Project including Templates
 correction=Correction
 correctionFor=Correction for step
 correctionK=C
+correctionMessage=Correction message
 correctionMessageSend=Send correction message
 correctionMessageSendAllTasks=send correction message to all tasks
 correctionMessageSendCurrentTask=send correction message to current task
