Add frontend pages for batch tasks edit

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -33,6 +33,8 @@ active=Aktiv
 activeUsers=Aktive Benutzer
 addDemoTask=Beispielaufgabe hinzuf\u00FCgen
 addFilter=Filter hinzuf\u00FCgen
+addMessage=Nachricht hinzuf\u00FCgen
+addMessageForAll=Nachricht zu allen Prozessen hinzuf\u00FCgen
 addNewMetadataGroup=Neue Metadatengruppe hinzuf\u00FCgen
 addProjects=Projekte hinzuf\u00FCgen
 addTemplateProperty=Vorlageneigenschaft hinzuf\u00FCgen
@@ -768,6 +770,7 @@ unbekannt=Unbekannt
 unit=Einheit
 uncounted=unnummeriert
 unlocked=Entsperrt
+updateType=Art der Aktualisierung
 upload=Images hochladen
 uploadFailed=Das Hochladen ist fehlgeschlagen.
 uploadFile=Datei hochladen
