--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -33,6 +33,8 @@ active=Active
 activeUsers=Current users
 addDemoTask=Add sample task
 addFilter=Add new filter to list
+addMessage=Add message
+addMessageForAll=Add message for all processes
 addNewMetadataGroup=Add new metadata group
 addProjects=Add projects
 addTemplateProperty=Add template property
@@ -766,6 +768,7 @@ unbekannt=Unknown
 unit=unit
 uncounted=uncounted
 unlocked=Unlocked
+updateType=Update type
 upload=Upload images
 uploadFailed=Upload failed.
 uploadFile=upload file
