Add translated message for converters

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -278,6 +278,7 @@ error=Error...
 error.SAXException=Basic error while parsing the XML data. You may want to check the file for being well-formed.
 error.TransformerException=An exceptional condition occurred during the transformation process to XML.
 errorAdding=Error adding ''{0}''
+errorConverter="Incorrect type: ''{0}'' must be ''{1}''!"
 errorCreating=Error creating new ''{0}''
 errorDataIncomplete=Incomplete data\:
 errorDatabaseReading=Error on reading database for ''{0}'' with ID {1}.
