--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -279,6 +279,7 @@ error=Fehler...
 error.SAXException=Die XML-Daten konnten nicht geparst werden. \u00DCberpr\u00FCfen Sie, ob die Datei wohlgeformt ist.
 error.TransformerException=Bei der Umwandlung in XML trat ein Fehler auf.
 errorAdding=Fehler beim Hinzuf\u00FCgen von ''{0}''
+errorConverter="Falscher Typ: ''{0}'' muss ''{1}'' sein!"
 errorCreating=Fehler beim Erzeugen einer neuen Instanz vom Typ ''{0}''
 errorDataIncomplete=Unvollst\u00E4ndige Daten\:
 errorDatabaseReading=Fehler beim Datenbanklesen von ''{0}'' with ID {1}.
