Reduce amount of code for task status change and process DMS export in ProzessverwaltungForm

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -256,6 +256,7 @@ docstructNachUntenSchieben=Strukturelement nach unten schieben
 docstructTypeAendern=Typ des Strukturelements \u00E4ndern
 docstructs=Strukturelemente
 doneSteps=Erledigte Schritte
+down=unter
 download=Images herunterladen
 duplicate=Duplizieren
 duplicateProject=Projekt duplizieren
@@ -279,6 +280,7 @@ error=Fehler...
 error.SAXException=Die XML-Daten konnten nicht geparst werden. \u00DCberpr\u00FCfen Sie, ob die Datei wohlgeformt ist.
 error.TransformerException=Bei der Umwandlung in XML trat ein Fehler auf.
 errorAdding=Fehler beim Hinzuf\u00FCgen von ''{0}''
+errorChangeTaskStatus=Fehler beim Ändern des Aufgabenstatus ''{0}'' für den Prozess mit der ID {1}.
 errorConverter="Falscher Typ: ''{0}'' muss ''{1}'' sein!"
 errorCreating=Fehler beim Erzeugen einer neuen Instanz vom Typ ''{0}''
 errorDataIncomplete=Unvollst\u00E4ndige Daten\:
@@ -774,6 +776,7 @@ unbekannt=Unbekannt
 unit=Einheit
 uncounted=unnummeriert
 unlocked=Entsperrt
+up=hoch
 updateType=Art der Aktualisierung
 upload=Images hochladen
 uploadFailed=Das Hochladen ist fehlgeschlagen.
