Apply review comments

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -284,6 +284,7 @@ errorCreating=Fehler beim Erzeugen einer neuen Instanz vom Typ ''{0}''
 errorDataIncomplete=Unvollst\u00E4ndige Daten\:
 errorDatabaseReading=Fehler beim Datenbanklesen von ''{0}'' with ID {1}.
 errorDeleting=Fehler beim L\u00F6schen von ''{0}''
+errorDiagram=Fehler für das Diagramm, das dem Workflow mit der ID {0} zugewiesen wurde.
 errorDirectoryDeleting=Fehler beim L\u00F6schen von ''{0}'' Verzeichnis.
 errorDownloading=Fehler beim Herunterladen von ''{0}''
 errorExport=Export abgebrochen, xml-LeseFehler bei Vorlage\: ''{0}''
