--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -283,6 +283,7 @@ errorCreating=Error creating new ''{0}''
 errorDataIncomplete=Incomplete data\:
 errorDatabaseReading=Error on reading database for ''{0}'' with ID {1}.
 errorDeleting=Error deleting ''{0}''
+errorDiagram=Error for diagram assigned to workflow with ID {0}.
 errorDirectoryDeleting=''{0}'' directory could not be deleted.
 errorDownloading=Error downloading ''{0}''
 errorExport=Export canceled for process\: ''{0}''
