Add messages for workflows

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -199,7 +199,7 @@ correctionReportProblem=Korrekturmeldung an vorherige Aufgabe konnte nicht gemel
 correctionSolutionFor=Korrekturl\u00F6sung f\u00FCr Schritt
 correctionSolveProblem=Korrekturl\u00F6sung konnte nicht an folgende Aufgabe gemeldet werden!
 couldNotCreateImageFolder=Das Verzeichnis f\u00FCr die Images konnte nicht angelegt werden
-count=Anzahl
+count=AnzahlrulesetSaving
 counting=Z\u00E4hlung
 createExcel=Exceldatei erzeugen
 createMapping=ElasticSearch Mapping erzeugen
@@ -208,6 +208,7 @@ createNewspaperProcessesTask.MetadataNotAllowedException=Der Vorgang {0} kann ni
 createNewBatchFromSelectedProcesses=Neuen Batch aus den gew\u00E4hlten Vorg\u00E4ngen erzeugen
 createNewDocket=Neuen Laufzettel anlegen
 createNewProcessFromTemplate=Einen neuen Vorgang auf Basis der Produktionsvorlage anlegen
+createNewWorkflow=Neuen Workflow anlegen
 createPdf=PDF erzeugen
 createXML=Export des Logfiles in das Home Verzeichnis
 createdInUserHome=Verzeichnis in Benutzerhome angelegt
@@ -264,6 +265,7 @@ duration=Laufzeit
 editDocket=Laufzettel bearbeiten
 editMetadataGroup=Metadatengruppe bearbeiten
 editTemplate=Vorlage bearbeiten
+editWorkflow=Workflow bearbeiten
 editor=Editor
 eineKopieDieserProzessvorlageAnlegen=Einen Vorgang auf Basis dieser Produktionsvorlage anlegen
 eineNeueProzessvorlageAnlegen=Eine neue Produktionsvorlage anlegen
@@ -548,6 +550,7 @@ newRuleSet=Neuer Regelsatz
 newProcessTemplate=Neue Produktionsvorlage
 newDocket=Neuer Laufzettel
 newProcess=Neuer Vorgang
+newWorkflow=Neuer Workflow
 newBatch=Neuer Batch
 newUser=Neuer Benutzer
 newUserGroup=Neue Benutzergruppe
@@ -648,6 +651,7 @@ prozessvorlagen=Produktionsvorlagen
 quarter=Quartal
 quarters=Quartale
 queryOPAC=OPAC abfragen
+ready=Fertig
 recordImport=Datensatz-Import
 records=Datens\u00E4tze
 reload=Aktualisieren
@@ -835,6 +839,7 @@ wikiField=Wiki-Feld
 # wirklichAusfuehren is used many times in onclick
 wirklichAusfuehren=M\u00F6chten Sie wirklich diesen Schritt ausf\u00FChren?
 workflow=Workflow
+workflowSaving=Workflow wird gespeichert...
 workflows=Workflows
 working=L\u00E4uft
 workpieceProperties=Werkst\u00FCckeigenschaften
