--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -205,8 +205,9 @@ createMapping=Create ElasticSearch mapping
 createNewspaperProcessesTask=Creation of processes for a newspaper
 createNewspaperProcessesTask.MetadataNotAllowedException=The process {0} cannot be created because a metadata element cannot be assigned to a structural type
 createNewBatchFromSelectedProcesses=create new batch of the selected processes
-createNewDocket=create new docket
+createNewDocket=Create new docket
 createNewProcessFromTemplate=Create process from template
+createNewWorkflow=Create new workflow
 createPdf=create pdf
 createXML=Export logfile as XML file to home directory
 createdInUserHome=Folder created in user directory
@@ -263,6 +264,7 @@ duration=Duration
 editDocket=edit docket
 editMetadataGroup=Edit metadata group
 editTemplate=Edit template
+editWorkflow=Edit workflow
 editor=Editor
 eineKopieDieserProzessvorlageAnlegen=Create process from this process template
 eineNeueProzessvorlageAnlegen=Create new process template
@@ -547,6 +549,7 @@ newRuleSet=New rule set
 newProcessTemplate=New process template
 newDocket=New docket
 newProcess=New process
+newWorkflow=New workflow
 newBatch=New batch
 newUser=New user
 newUserGroup=New user group
@@ -646,6 +649,7 @@ prozessvorlagen=Process templates
 quarter=quarter
 quarters=quarters
 queryOPAC=Query OPAC
+ready=Ready
 recordImport=record import
 records=records
 reload=reload
@@ -833,6 +837,7 @@ wikiField=Wiki field
 # wirklichAusfuehren is used many times in onclick
 wirklichAusfuehren=Are you sure you want to execute?
 workflow=Workflow
+workflowSaving=Saving workflow...
 workflows=Workflows
 working=Working
 workpieceProperties=Workpiece properties
