--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -420,6 +420,7 @@ invalidIdentifierCharacter=Der Wert des Identifiers {0} im Strukturelement {1} e
 invalidIdentifierSame=Der Wert des Identifiers {0} enth\u00E4lt die gleichen Werte in {1} und {2}.
 isInUse=befindet sich in Bearbeitung durch
 isActive=Benutzerkonto aktiv
+languages=Sprachen
 languageUserInterface=Sprache f\u00FCr Nutzeroberfl\u00E4che
 lastActionBefore=Letzte Aktion vor\:
 lastEdited=Letzte Aktualisierung
