Move clients to user page and indexing and task manager to new system page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -731,6 +731,7 @@ structureElementAdd=Strukturelement hinzuf\u00FCgen
 structureElementDelete=Strukturelement l\u00F6schen
 strukturelementVerschiebenErlaeuterung=W\u00E4hlen Sie nun die Stelle aus, an die das gew\u00E4hlte Strukturelement verschoben werden soll.
 suffix=Suffix
+system=System
 table=Tabelle
 tableSize=Tabellengr\u00F6\u00DFe
 task=Aufgabe
