--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -729,6 +729,7 @@ structureElementAdd=Add docstruct
 structureElementDelete=Delete docstruct
 strukturelementVerschiebenErlaeuterung=Please select the node where the selected docstruct should be pasted.
 suffix=Suffix
+system=System
 table=Table
 tableSize=Table size
 task=Task
