Update footer styles and add links

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -217,6 +217,7 @@ dataCopier.runtimeException=Copying the data failed\:
 dataCopier.syntaxError=The data copying rule is malformed\:
 file=File
 dashboard=Dashboard
+dataPrivacy=Data privacy
 dateiMitTiffHeaderSpeichern=Save file with tiff header
 day=day
 days=days
@@ -408,6 +409,7 @@ importMittelsFileUpload=Import by file upload
 importedBatchLabel=Imported from {0}, {1}
 importingData=Importing data...
 importplugin=import Plugin
+imprint=Imprint
 inBearbeitungDurch=In edition by
 indexedEntries=Indexed entries
 indexing=Indexing
@@ -748,6 +750,7 @@ templateDetails=Template details
 templateProperty=template property
 templateProperties=Template properties
 templateTitle=Template title
+termsOfUse=Terms of use
 tifHeaderDocumentName=Tiff header document name
 tifHeaderImageDescription=Tiff header image description
 timeZone.+01\:00=CET
