Update Kitodo desktop/start page

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -52,6 +52,9 @@ alleTasksAusListeEntfernen=Remove all tasks
 alleTrefferDieserSeiteInMeinHomeverzeichnis=Put all hits for this page in my home directory
 allgemeines=General
 allMyTasks=All my tasks
+allProcesses=All processes
+allProjects=All projects
+allTasks=All tasks
 alsErstesKindDesAktuellenElements=As first child of current element
 alsLetztesKindDesAktuellenElements=As last child of current element
 anzahlDerArtikelUndImages=Number of articles and images
@@ -228,6 +231,7 @@ deleteBatch=delete the selected batch
 deleteIndex=Delete ElasticSearch index
 deleteFromProject=Delete user from project
 deleteTask=Delete task
+desktop=Desktop
 details=Details
 detailsDesArbeitsschritts=Details of the task
 detailsDesSchritts=Details of the task
