--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -52,6 +52,9 @@ alleTasksAusListeEntfernen=Alle Aufgaben l\u00F6schen
 alleTrefferDieserSeiteInMeinHomeverzeichnis=Alle Treffer dieser Seite in mein Homeverzeichnis laden
 allgemeines=Allgemeines
 allMyTasks=alle meine Aufgaben
+allProcesses=Alle Vorg\u00E4nge
+allProjects=Alle Projekte
+allTasks=Alle Aufgaben
 alsErstesKindDesAktuellenElements=Als erstes Subelement des aktuellen Elementes
 alsLetztesKindDesAktuellenElements=Als letztes Subelement des aktuellen Elementes
 anzahlDerArtikelUndImages=Anzahl der Artikel und Images
@@ -229,6 +232,7 @@ deleteBatch=Den ausgew\u00E4hlten Batch l\u00F6schen
 deleteIndex=ElasticSearch Index l\u00F6schen
 deleteFromProject=Benutzer aus der Projekt l\u00F6schen
 deleteTask=Aufgabe l\u00F6schen
+desktop=Desktop
 details=Details
 detailsDesArbeitsschritts=Details der Aufgabe
 detailsDesSchritts=Details der Aufgabe
