Fix footer data privacy message

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -218,7 +218,7 @@ dataCopier.runtimeException=Fehler beim Kopieren der Daten\:
 dataCopier.syntaxError=Die Datenkopierregel hat ein falsches Format\:
 file=Datei
 dashboard=Dashboard
-dataPrivacy=Datenschatz
+dataPrivacy=Datenschutz
 dateiMitTiffHeaderSpeichern=Datei mit Tiff-Header speichern
 day=Tag
 days=Tage
