added dialog after login

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -877,3 +877,7 @@ youWillBeRedirected=You will be redirected after successful save.
 zeitschrift=Periodical
 relatedPages=Related pages
 zurueckZuArbeitsschritt=Back to task
+welcome=Welcome
+selectClientNote=To complete your login, you must select a client. You can change clients at any time using the user icon.
+selectClient=Select a client
+select=Select
