Add actions to project widget on desktop

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -223,6 +223,7 @@ dataCopier.syntaxError=Die Datenkopierregel hat ein falsches Format\:
 file=Datei
 dashboard=Dashboard
 dataPrivacy=Datenschutz
+databaseStatistic=Datenbankstatistik
 dateiMitTiffHeaderSpeichern=Datei mit Tiff-Header speichern
 day=Tag
 days=Tage
