--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -222,6 +222,7 @@ dataCopier.syntaxError=The data copying rule is malformed\:
 file=File
 dashboard=Dashboard
 dataPrivacy=Data privacy
+databaseStatistic=Database statistics
 dateiMitTiffHeaderSpeichern=Save file with tiff header
 day=day
 days=days
