Add delete button to lists

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -191,7 +191,14 @@ configurationFile=Konfigurationsdatei
 configurationOPAC=OPAC Konfiguration
 configurationSaving=Konfiguration wird gespeichert...
 confirmDelete=L\u00F6schen best\u00E4tigen
+confirmDeleteClient=Mandant l\u00F6schen?
+confirmDeleteDocket=Laufzettel l\u00F6schen?
+confirmDeleteLdapgroup=LDAP-Gruppe l\u00F6schen?
 confirmDeleteProcess=Vorgang l\u00F6schen?
+confirmDeleteProject=Projekt l\u00F6schen?
+confirmDeleteRuleset=Regelsatz l\u00F6schen?
+confirmDeleteUser=Benutzer l\u00F6schen?
+confirmDeleteUsergroup=Benutzergruppe l\u00F6schen?
 confirmNewPassword=Neues Passwort best\u00E4tigen
 copy=Kopie
 copyTemplates=Projekt inkl. Templates kopieren
