--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -190,7 +190,14 @@ configurationFile=Configuration file
 configurationOPAC=OPAC configuration
 configurationSaving=Saving configuration...
 confirmDelete=Confirm delete
+confirmDeleteClient=Delete client?
+confirmDeleteDocket=Delete docket?
+confirmDeleteLdapgroup=Delete LDAP group?
 confirmDeleteProcess=Delete process?
+confirmDeleteProject=Delete project?
+confirmDeleteRuleset=Delete ruleset?
+confirmDeleteUser=Delete user?
+confirmDeleteUsergroup=Delete user group?
 confirmNewPassword=Confirm new password
 copy=copy
 copyTemplates=Copy Project including Templates
