Add message tags for statisticsWidget

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -778,6 +778,7 @@ hits=Treffer
 trefferDieserSeite=Treffer dieser Seite
 tsl=TSL
 typ=Typ
+type=Art
 typeSet=Typ setzen\:
 typeSetLogistic=Logistik
 typeSetNewspaper=Zeitung
