--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -776,6 +776,7 @@ hits=Hits
 trefferDieserSeite=Hits of this page
 tsl=TSL
 typ=Type
+type=Type
 typeSet=Set type\:
 typeSetLogistic=Logistics
 typeSetNewspaper=newspaper
