simplified retrieving of client name

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -880,6 +880,7 @@ zeitschrift=Zeitschrift
 relatedPages=Zugeh\u00F6rige Seiten
 zurueckZuArbeitsschritt=Zur\u00FCck zu Aufgabe
 welcome=Willkommen
-selectClientNote=Um Ihre Anmeldung abzuschlie\u00DFen m\u00FCssen Sie einen Mandanten w\u00E4hlen, \u00FCber das Benutzer Symbol k\u00F6nnen Sie jederzeit den Mandanten wechseln.
-selectClient=W\u00E4hlen Sie einen Mandanten
+clientSelectNote=Um Ihre Anmeldung abzuschlie\u00DFen m\u00FCssen Sie einen Mandanten w\u00E4hlen, \u00FCber das Benutzer Symbol k\u00F6nnen Sie jederzeit den Mandanten wechseln.
+clientSelect=W\u00E4hlen Sie einen Mandanten
 select=Ausw\u00E4hlen
+clientSelectNone=Kein Mandant ausgew\u00E4hlt
