--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -878,6 +878,7 @@ zeitschrift=Periodical
 relatedPages=Related pages
 zurueckZuArbeitsschritt=Back to task
 welcome=Welcome
-selectClientNote=To complete your login, you must select a client. You can change clients at any time using the user icon.
-selectClient=Select a client
+clientSelectNote=To complete your login, you must select a client. You can change clients at any time using the user icon.
+clientSelect=Select a client
 select=Select
+clientSelectNone=No client selected
