added note at client select if no client ia available

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -884,3 +884,4 @@ clientSelectNote=Um Ihre Anmeldung abzuschlie\u00DFen m\u00FCssen Sie einen Mand
 clientSelect=W\u00E4hlen Sie einen Mandanten
 select=Ausw\u00E4hlen
 clientSelectNone=Kein Mandant ausgew\u00E4hlt
+authoritiesNoneNote=Ihr Nutzeraccount beeinhaltet keinerlei Berechtigungen. Bitte wenden Sie sich an Ihren Adminstrator. 
