--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -882,3 +882,4 @@ clientSelectNote=To complete your login, you must select a client. You can chang
 clientSelect=Select a client
 select=Select
 clientSelectNone=No client selected
+authoritiesNoneNote=Your user account does not contain any authorities. Please contact your administrator.
