Change Vorlage to Produktionsvorlage

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -297,7 +297,7 @@ editFolderDialog.mimeType=Dateityp
 editFolderDialog.path=Ordner
 editFolderDialog.urlStructure=METS-Pfad
 editMetadataGroup=Metadatengruppe bearbeiten
-editTemplate=Vorlage bearbeiten
+editTemplate=Produktionsvorlage bearbeiten
 editWorkflow=Workflow bearbeiten
 editor=Editor
 createProcessFromTemplate=Einen Vorgang auf Basis dieser Produktionsvorlage anlegen
@@ -580,7 +580,7 @@ newProject=Neues Projekt
 newClient=Neuer Mandant
 newElement=Neu
 newRuleSet=Neuer Regelsatz
-newProcessTemplate=Neue Produktionsvorlage
+newTemplate=Neue Produktionsvorlage
 newDocket=Neuer Laufzettel
 newProcess=Neuer Vorgang
 newWorkflow=Neuer Workflow
