--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -579,7 +579,7 @@ newProject=New project
 newClient=New client
 newElement=New
 newRuleSet=New rule set
-newProcessTemplate=New process template
+newTemplate=New process template
 newDocket=New docket
 newProcess=New process
 newWorkflow=New workflow
